lab1/Test/L1-A-13-9.output
Error Type B at Line 6
Error Type A at Line 19
Error Type A at Line 19
Error Type A at Line 20
Error Type A at Line 38
Error Type B at Line 47
Error Type A at Line 48
Error Type B at Line 58
Error Type B at Line 68
